# Chat-Application

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ChatWindow.cpp.D94C7F06A4EB2F06.idx  ChatWindow.h.0D1743E569601492.idx  DeviceServer.cpp.C2B23EE36FDBE4D8.idx  DeviceServer.h.27A3AC8D3AA99B76.idx  LoginWindow.cpp.FF97DE6B8431DB84.idx  LoginWindow.h.7BCF68C7728B6D27.idx  MainWindow.h.A9F9AF430D26EF17.idx  Window.cpp.E65AE9B722A3EA4A.idx  Window.h.F8FEC4EAED163BDD.idx  main.cpp.3049D8176BB01C7D.idx  server.cpp.2772B785B6D521EF.idx
Client/: CMakeLists.txt
Client/src/: ChatWindow.cpp  ChatWindow.h  LoginWindow.cpp  LoginWindow.h  Window.cpp  Window.h  main.cpp
Server/: CMakeLists.txt
Server/src/: DeviceServer.cpp  DeviceServer.h  server.cpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-debug/Client/: Client  Makefile  cmake_install.cmake
build-debug/Client/src/: moc_ChatWindow.cpp  moc_ChatWindow.cpp_parameters  moc_LoginWindow.cpp  moc_LoginWindow.cpp_parameters  moc_Window.cpp  moc_Window.cpp_parameters
build-debug/Server/: Makefile  Server  cmake_install.cmake
build-debug/Server/src/: moc_DeviceServer.cpp  moc_DeviceServer.cpp_parameters
